--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml
       - name: Run tests
-        run: mvn -X test
+        run: mvn test
       - run: git config --global user.name "spiralspree"
       - run: git config --global user.email "spiralspree@gmail.com"
       - run: git fetch --unshallow
