--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,6 +25,13 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml
       - name: Run tests
+        env:
+          WANNAJOIN_DB_NAME: ${{ secrets.WANNAJOIN_DB_NAME }}
+          WANNAJOIN_DB_PORT: ${{ secrets.WANNAJOIN_DB_PORT }}
+          WANNAJOIN_DB_PW: ${{ secrets.WANNAJOIN_DB_PW }}
+          WANNAJOIN_DB_SERVER: ${{ secrets.WANNAJOIN_DB_SERVER }}
+          WANNAJOIN_DB_URL: ${{ secrets.WANNAJOIN_DB_URL }}
+          WANNAJOIN_DB_USER: ${{ secrets.WANNAJOIN_DB_USER }}
         run: mvn test
       - run: git config --global user.name "spiralspree"
       - run: git config --global user.email "spiralspree@gmail.com"
