--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,6 +15,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Set up environment veriables
+        env:
+            WANNAJOIN_DB_NAME: ${{ secrets.WANNAJOIN_DB_NAME }}
+            WANNAJOIN_DB_PORT: ${{ secrets.WANNAJOIN_DB_PORT }}
+            WANNAJOIN_DB_PW: ${{ secrets.WANNAJOIN_DB_PW }}
+            WANNAJOIN_DB_SERVER: ${{ secrets.WANNAJOIN_DB_SERVER }}
+            WANNAJOIN_DB_URL: ${{ secrets.WANNAJOIN_DB_URL }}
+            WANNAJOIN_DB_USER: ${{ secrets.WANNAJOIN_DB_USER }}
       - uses: actions/checkout@v2
       - name: Set up JDK 11
         uses: actions/setup-java@v2
