--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,7 +24,7 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Build with Maven
-        run: mvn -B -DskipTests package --file pom.xml
+        run: mvn -B package --file pom.xml
       - name: Upload test artifact after build
         if: always()
         uses: actions/upload-artifact@v3
