--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,22 +10,25 @@ on:
     branches: [ development ]
 
 jobs:
-#  TODO: refactor job content
   build:
 
     runs-on: ubuntu-latest
 
     steps:
+
       - name: Checkout repo
         uses: actions/checkout@v2
+
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribution: 'temurin'
           cache: maven
+
       - name: Compile with Maven
         run: mvn -B compile --file pom.xml
+
       - name: Run tests
         env:
           WANNAJOIN_DB_NAME: ${{ secrets.WANNAJOIN_DB_NAME }}
@@ -34,14 +37,17 @@ jobs:
           WANNAJOIN_DB_SERVER: ${{ secrets.WANNAJOIN_DB_SERVER }}
           WANNAJOIN_DB_URL: ${{ secrets.WANNAJOIN_DB_URL }}
           WANNAJOIN_DB_USER: ${{ secrets.WANNAJOIN_DB_USER }}
-        run: mvn -DskipTests=false test
+        run: mvn test
+
       - name: Upload test artifact
         if: always()
         uses: actions/upload-artifact@v3
         with:
           name: test-results
           path: ./DBConnectionTestLogs.txt
+
       - name: Config user
         run: git config --global user.name "spiralspree" && git config --global user.email "spiralspree@gmail.com"
+
       - name: Deploy to master
         run: git fetch --unshallow && git checkout master && git merge development && git push origin master
