--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=${PORT:5000}
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=${WANNAJOIN_JDBC_DB_URL}
+spring.datasource.driver-class-name=org.postgresql.Driver
