--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -52,5 +52,7 @@ jobs:
       - name: Config user
         run: git config --global user.name "spiralspree" && git config --global user.email "spiralspree@gmail.com"
 
-      - name: Deploy to master
-        run: git fetch --unshallow && git checkout master && git merge development && git push origin master
+      - name: Create pull request to master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh pr create --base master --head development
