Add fill flag at PR creation
Reason: gh pr create command needs title and body info, or the fill flag wich uses the commit info to fill those

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -55,4 +55,4 @@ jobs:
       - name: Create pull request to master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh pr create --base master --head development
+        run: gh pr create --base master --head development --fill
