Omit maven clean before test and package
Reason: trying to speed up the test and packaging in the Actions workflow. Expected to prevent maven from re-compiling.

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,10 +39,10 @@ jobs:
         run: mvn clean compile
 
       - name: Test
-        run: mvn clean test
+        run: mvn test
 
       - name: Package
-        run: mvn clean package
+        run: mvn package
 
       - name: Upload test artifact
         if: always()
